# croatian-tutor

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 502e2ba3bd52_initial_schema_with_all_models.py  6f2fb341c2b4_add_correct_streak_to_word.py  a1b2c3d4e5f6_scale_topic_mastery_to_1000.py  b2c3d4e5f6a7_add_app_settings_table.py  c1d1e1f1a1b1_add_language_table.py  d2e2f2a2b2c2_add_language_to_tables.py  e3f3a3b3c3d3_add_multi_user_auth.py
backend/app/: __init__.py  config.py  database.py  exceptions.py  main.py
backend/app/api/: __init__.py  analytics.py  auth.py  dependencies.py  drills.py  exercises.py  languages.py  progress.py  router.py  sessions.py  settings.py  topics.py  words.py
backend/app/core/: security.py
backend/app/crud/: __init__.py  app_settings.py  grammar_topic.py  language.py  session.py  user.py  word.py
backend/app/models/: __init__.py  app_settings.py  enums.py  error_log.py  exercise.py  exercise_log.py  grammar_topic.py  language.py  learning_session.py  progress.py  session.py  topic.py  topic_progress.py  user.py  word.py
backend/app/schemas/: __init__.py  app_settings.py  auth.py  drill.py  exercise.py  grammar_topic.py  language.py  progress.py  (+3 more)
backend/content/: ITALIAN_TOPICS.md  italian_grammar_topics_a2.json  italian_grammar_topics_b2.json  italian_grammar_topics_c1.json
backend/scripts/: import_grammar_topics.py  seed_grammar_topics.py  seed_italian_topics.py
(+78 files in other folders)
